<resources>
    <string name="app_name">MeetingTracker</string>
    <string name="enterpin">Enter 4 digit Pin</string>
    <string name="submit">Submit</string>
    <string name="intro_text">Please enter your pin to secure your account!</string>
    <string name="skip">Skip for Now</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_pin">Please confirm your pin!</string>
    <string name="confirm_input">Confirm Pin </string>
    <string name="create_event">Create Event</string>
    <string name="past_event">Past Events</string>
    <string name="reminder_settings">Reminder Settings</string>
    <string name="pin_settings">Pin Setting</string>
    <string name="event_title">Enter Event Title</string>
    <string name="event_description">Enter event description</string>
    <string name="enter_datetime">Select Event Date and Time</string>
    <string name="event_location">Select Event Location</string>
    <string name="OK">OK</string>
    <string name="usecurrentlocation">Use Current Location</string>
    <string name="entercurrentlocation">Enter Location</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="alert_me">Alert me:</string>
    <string name="two_week">Two Week Before the Meeting</string>
    <string name="one_week">One week before the meeting</string>
    <string name="three_days">Three days before the meeting</string>
    <string name="one_day">One Day before Meeting</string>
    <string name="twelve_hour">Twelve hour before the meeting</string>
    <string name="about_start">About to start</string>
    <string name="save_reminder">Set Reminder</string>
    <string name="change_pin">Change Pin</string>
    <string name="remove_pin">Remove Pin</string>
    <string name="setup_pin">Setup Pin</string>
    <string name="enteroldpin">Enter Old Pin</string>
    <string name="newPin">Enter New Pin</string>
    <string name="confirm_pin_changePin">Confirm Pin</string>
    <string name="login">Please enter your pin to Login</string>
    <string name="event_title_tv">Event Title</string>
    <string name="eventDescTv">Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</string>
    <string name="eventDateTimeTv">10-12-2016 12:30 PM</string>
    <string name="eventLocationTv">15602 Marathon cir Apt 204, Gaithersburg Md 20878</string>

</resources>
