<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:gravity="center"
    android:orientation="vertical"

    tools:context="com.simpalm.meetingtracker.MainActivity">


    <Button
        android:id="@+id/create_event_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_event" />

    <Button
        android:id="@+id/past_event_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/past_event" />

    <Button
        android:id="@+id/reminder_setting_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_settings" />

    <Button
        android:id="@+id/pin_setting_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pin_settings" />
</LinearLayout>
