<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edit_text_height"
        android:gravity="center"
        android:text="@string/intro_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/pin_et"
        style="@style/EditText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/edit_text_height"
        android:gravity="center"
        android:hint="@string/enterpin"
        android:inputType="number"
        android:maxLength="4"
        android:padding="@dimen/edit_text_padding" />

    <Button
        android:id="@+id/enter_pin_btn"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/submit" />


    <TextView
        android:id="@+id/skip_tv"
        style="@style/TextViewLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip" />

</LinearLayout>
