<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_event"
    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:orientation="vertical"

    tools:context="com.simpalm.meetingtracker.CreateEvent">

    <include
        android:id="@+id/toolbar_create_event"
        layout="@layout/toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/event_title_et"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:hint="@string/event_title"
            android:inputType="textCapWords"
            android:padding="@dimen/edit_text_padding" />

        <EditText
            android:id="@+id/event_description_et"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/description_height"
            android:gravity="start"
            android:hint="@string/event_description"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:padding="@dimen/edit_text_padding"
            android:textSize="@dimen/description_size" />

        <TextView
            android:id="@+id/event_date_time_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/et_normal"
            android:hint="@string/enter_datetime"
            android:padding="@dimen/edit_text_padding" />

        <RadioGroup
            android:id="@+id/rdgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <RadioButton
                android:id="@+id/enter_location_rdbtn"
                style="@style/TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entercurrentlocation" />

            <RadioButton
                android:id="@+id/current_location_rdbtn"
                style="@style/TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usecurrentlocation" />
        </RadioGroup>

        <AutoCompleteTextView

            android:id="@+id/event_location_et"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/event_location"
            android:inputType="text"
            android:padding="@dimen/edit_text_padding" />

        <Button
            android:id="@+id/add_event_btn"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/create_event" />


    </LinearLayout>
</LinearLayout>
