<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_pin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.simpalm.meetingtracker.ChangePin">

    <include
        android:id="@+id/toolbar_change_pin"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/editText_old_pin_changePin"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:hint="@string/enteroldpin"
        android:inputType="number"
        android:maxLength="4" />

    <EditText
        android:id="@+id/editText_old_pin_newPin"

        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:hint="@string/newPin"
        android:inputType="number"
        android:maxLength="4" />

    <EditText
        android:id="@+id/editText_confirm_pin_changePin"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:hint="@string/confirm_pin_changePin"
        android:inputType="number"
        android:maxLength="4" />

    <Button
        android:id="@+id/btn_changePin"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/change_pin" />


</LinearLayout>
