<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pin_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.simpalm.meetingtracker.PinSettings">

    <include
        android:id="@+id/toolbar_pin_settings"

        layout="@layout/toolbar" />

    <Button
        android:id="@+id/button_changepin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/change_pin" />

    <Button
        android:id="@+id/button_remove_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/remove_pin" />


    <Button
        android:id="@+id/button_setup_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/setup_pin" />

</LinearLayout>
