<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edit_text_height"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_login_pin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/edit_text_height"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:hint="@string/enterpin"
        android:inputType="number"
        android:maxLength="4"
        android:padding="@dimen/edit_text_padding"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:text="@string/submit" />


</LinearLayout>
