<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pastEventTitle_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                tools:text="@string/event_title_tv" />

            <TextView
                android:id="@+id/pastEventDesc_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                tools:text="@string/eventDescTv" />

            <TextView
                android:id="@+id/pastEventDateTime_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/eventDateTimeTv"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/pastEventLocation_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventLocationTv" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/delte_event_btn"
                android:layout_marginRight="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:drawable/ic_delete"
                android:scaleType="centerCrop" />


        </LinearLayout>


    </LinearLayout>
</LinearLayout>