<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eventTitleTv_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                tools:text="@string/event_title_tv" />

            <TextView
                android:id="@+id/eventDescTv_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                tools:text="@string/eventDescTv" />

            <TextView
                android:id="@+id/eventDateTimeTv_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/eventDateTimeTv"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/eventLocationTv_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventLocationTv" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/set_reminder_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/alarmHeight"
                android:background="@android:drawable/ic_lock_idle_alarm"
                android:scaleType="centerCrop" />


        </LinearLayout>


    </LinearLayout>
</LinearLayout>