<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_pin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.simpalm.meetingtracker.ChangePin">

    <ImageButton
        android:id="@+id/imgbtn_setupPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:background="@android:color/transparent"
        android:src="@drawable/back" />

    <EditText
        android:id="@+id/edittext_enterPin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:hint="@string/enterpin"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/editText_confirm_pin_setupPin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:hint="@string/confirm_input"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_setupPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/setup_pin" />


</LinearLayout>
